<resources>
    <string name="app_name">RayDos</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="random_target_switch_title">Use random target</string>
    <string name="random_target_switch_summary">When enabled, will use a random email or number as the target</string>
    <!-- Preference Titles -->

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
    <string name="random_text_summary">Use random computer generated text for each SMS sent by this app. NOTE: the generated messages may include profanity, but will never include hate, directly offensive content, or sexually suggestive content.</string>
    <string name="random_text_title">Use random text</string>
    <string name="target_number_text_title">Edit target number</string>
    <string name="target_number_text_summary">Enter the target recipient of the messages sent by this app</string>
    <string name="default_message_text_title">Text message content</string>
    <string name="default_message_text_summary">Chose the content of the messages sent by this app</string>
    <string name="default_message_text_default_value">You had better hope you have a warrant/wiretap to collect and store these messages. Also sure would be a shame if your stingray crashed from all these messages</string>
    <string name="target_label_text">Target:</string>
    <string name="delay_between_messages_summary">Sets the delay between each message sent</string>
    <string name="delay_between_messages_title">Delay between each message</string>
    <string name="message_text">Message text:</string>
    <string name="messages_sent_label">Messages sent:</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="sms_permission_dialog_message">Since the primary function of this application is to send SMS messages, it is rendered useless without the permission to send SMS messages. The contents of the messages that are sent through this app are never logged, saved or recorded by this app, nor are the destinations of the messages.If you do not wish to grant the permission to send SMS messages, this app will close and should be uninstalled.</string>
    <string name="sms_permission_dialog_exit_button">Exit Application</string>
    <string name="sms_permission_dialog_retry_button">OK, Grant Permission</string>
    <string name="messages_actually_sent_label">Messages actually sent</string>
    <string name="messages_confirmed_to_be_delivered">Messages Delivered</string>
    <string name="notification_title">RayDos Is Running</string>
    <string name="general_preference_category_title">General</string>
    <string name="messages_sent_label_description">Number of SMS messages sent</string>
    <string name="target_label_content">The target address of the SMS messages</string>
    <string name="the_contents_of_the_next_sms_message_to_be_sent">The contents of the next SMS message to be sent</string>
    <string name="the_sms_message_content">The SMS message content</string>
    <string name="number_of_messages_that_have_been_actually_sent_content">Number of messages that have been actually sent</string>
    <string name="messages_delivered_label_content">The number of SMS messages that produced delivery reports</string>
    <string name="the_number_of_delivered_messages">The number of delivered messages</string>
    <string name="start_running_raydos">Start running RayDos</string>
    <string name="sms_source_switch_summary">If enabled, this allows you to configure the source value of the SMS messages sent. This may result in failure to send with some carriers</string>
    <string name="sms_source_title">Set SMS Source</string>
    <string name="sms_source_default_value">1234567890</string>
    <string name="sms_source_text_value">Edit source value</string>
    <string name="experimental_preference_title">Experimental</string>
    <string name="disabled_text">disabled</string>
    <string name="runtime_label_text">The label for the amount of time the service has been running for</string>
    <string name="current_runtime">Current runtime</string>
    <string name="clear_outbox_button_desc">Deletes all unsent messages in the outbox. May help if messages are failing to send.</string>
    <string name="clear_outbox_button_title">Clear outbox messages</string>
    <string name="write_log_title">Write phone info to log</string>
    <string name="write_log_summary">If enabled, will write phone state variables to a log file for later analysis</string>
    <string name="notification_content">"RayDos is currently running in the background. Click info to re-open the app or press exit to stop RayDos."</string>
    <string name="notification_channel_id">1312</string>
    <string name="notification_channel_name">RayDos is currently running in the background</string>
    <string name="info_notification_text">Info</string>
    <string name="info_item_1_title">What is a Stingray?</string>
    <string name="info_item_details_1">\"A Stingray is a device that pretends to be a cell phone tower. When it is turned on, it sends out a ping to all cellular devices within the reach of its signal and informs the devices that the Stingray is now online. \"</string>
    <string name="info_item_details_2">It informs the devices they should disconnect from the tower they are currently connected to, and register with the Stingray.</string>
    <string name="info_item_details_3">Stingrays are commonly referred to as IMSI Catchers, Dirtboxes, Kingfish, HailStorm, Stingray I, Stingray II, Gossamer, Triggerfish Cell Tower Simulators, and Cell Site Simulators.</string>
    <string name="info_item_details_4">Stingrays are mostly manufactured by the Florida company Harris Corporation.</string>
    <string name="info_item_2_title">What can Stingrays do?</string>
    <string name="info_item_details_5">Stingrays can intercept and forward the data and communications from all cellular devices that are within the area of range of the Stingray\'s antennae. Unencrypted data like text messages and phone calls are particularly vulnerable.</string>
    <string name="info_item_details_6">Stingrays can be used to block all incoming and outgoing information from reaching cell phones in the area of effect of the Stingray.</string>
    <string name="info_item_details_7">Theoretically, a Stingray could be used to invoke a cellphone\'s built-in over-the-air update mechanism, forcing the phone to install a malicious software update or to download a malicious app without the knowledge or authorization of the user.</string>
    <string name="info_item_details_8">With the help of a device called an AmberJack, Stingrays can be used to triangulate the exact location of target cell phones, including phones that do not have location services enabled.</string>
    <string name="info_item_3_title">Who uses Stingrays?</string>
    <string name="info_item_details_9">Stingrays were originally developed for use by the U.S. Navy, but since then have been de-regulated by the FCC so that anybody with an antenna can create and operate a Stingray</string>
    <string name="info_item_details_10">Predominately, these devices are purchased and used by the U.S. Federal government, as well as State and local police and sheriff departments.</string>
    <string name="info_item_details_11">Among the list of federal agencies known to own and operate Stingrays, is the FBI, DEA, ICE, the Dept. of Justice, and the U.S. Marshals Service.</string>
    <string name="info_item_4_title">How does RayDos help?</string>
    <string name="info_item_details_12">While running, RayDos will send out text messages with pre-defined content or with randomized content, in an attempt to overwhelm the StingRay and to make it harder for watching parties to discern real texts from ones generated by RayDos.</string>
    <string name="info_page_continue_button">Continue</string>
    <string name="source">Source:</string>
    <string name="usage_guidelines_title">RayDos Usage Guidelines</string>
    <string name="usage_guidelines_message">This app must only be used in a non-disruptive manner and in a manner that is consistent with laws in your locality. This app can be used to send text messages for you automatically. If you decide to use this feature, you agree to never use the feature to send spam, and to only send messages to numbers that are OK with receiving messages from you.</string>
    <string name="usage_guidelines_positive_button">I agree</string>
    <string name="usage_guidelines_negative_button">Quit</string>
    <string name="configure">Configure</string>
    <string name="last_page_header">About</string>
    <string name="destination_number_error_message">Destination number is not correctly configured</string>
</resources>